test/classes/initializers/phase1/use-before-field.good
use-before-field.chpl:9: In initializer:
use-before-field.chpl:10: error: Field used before it is initialized
